fix spacing on homepage

--- a/_assets/css/custom/_header.scss
+++ b/_assets/css/custom/_header.scss
@@ -22,13 +22,17 @@ $masthead-height: 60px;
   }
 }
 
+#page-home #masthead {
+  margin-bottom: $base-spacing * 1.5;
+}
+
 #masthead {
   border-bottom: 6px solid $light-gray;
   height: $masthead-height;
-  margin: 0 0 $base-spacing * 1.5 -12px;
+  margin: 0 0 $base-spacing * 2.5 -12px;
   img {
     float: left;
-    margin: -2px 12px 0 -72px;
+    margin: -10px 12px 0 -72px;
     border: none;
     visibility: hidden;
   }
